[gd_scene load_steps=6 format=3 uid="uid://dwxdu23qkvkdi"]

[ext_resource type="Script" path="res://SimShock/Scripts/NoteUI.gd" id="1_1nsat"]
[ext_resource type="Texture2D" uid="uid://ryhle5u4d4mn" path="res://COGITO/Assets/Graphics/InputIcons/Keyboard/Keyboard_F.png" id="2_k80m6"]
[ext_resource type="PackedScene" uid="uid://btf6bmlgtfk1b" path="res://COGITO/Components/DynamicInputIcon.tscn" id="3_b4d30"]

[sub_resource type="LabelSettings" id="LabelSettings_o3qam"]
font_size = 18
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l27m6"]
font_size = 45
shadow_color = Color(0, 0, 0, 0.392157)

[node name="NoteUI" type="Control" node_paths=PackedStringArray("player")]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1nsat")
player = NodePath("")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InteractionButton_old" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
texture = ExtResource("2_k80m6")
expand_mode = 2

[node name="Container" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="InteractionButton" parent="VBoxContainer/HBoxContainer/Container" instance=ExtResource("3_b4d30")]
position = Vector2(0, 0)
scale = Vector2(0.4, 0.4)
centered = false
frame = 6
action_name = "menu"

[node name="InteractionText" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"
label_settings = SubResource("LabelSettings_o3qam")

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Title"
label_settings = SubResource("LabelSettings_l27m6")
horizontal_alignment = 1

[node name="ContentLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Content"
horizontal_alignment = 3
